<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320px"
    android:layout_height="480px"
    android:orientation="vertical"
    android:isScrollContainer="true"
    android:background="@drawable/bg">
    <TextView
    	android:background="@android:color/transparent"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_marginTop="8dip"
    	android:singleLine="true"
    	android:gravity="center"
    	android:textAppearance="?android:attr/textAppearanceMedium"
    	android:text="@string/title_activate_dialog"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:layout_weight="1"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5px"
            android:paddingRight="5px"
            android:orientation="vertical">
		    <TextView
		    	android:background="@android:color/transparent"
		    	android:layout_height="wrap_content"
		    	android:layout_width="fill_parent"
		    	android:singleLine="false"
		    	android:textColor="@android:color/black"
		    	android:textAppearance="?android:attr/textAppearanceMedium"
		    	android:text="@string/txt_activate1"/>
		    <TextView
		    	android:background="@android:color/transparent"
		    	android:layout_height="wrap_content"
		    	android:layout_width="fill_parent"
		    	android:layout_marginTop="40dip"
		    	android:singleLine="false"
		    	android:textColor="@android:color/black"
		    	android:textAppearance="?android:attr/textAppearanceMedium"
		    	android:text="@string/txt_activate2"/>
		    <TextView
		    	android:background="@android:color/transparent"
		    	android:layout_height="wrap_content"
		    	android:layout_width="fill_parent"
		    	android:layout_marginTop="50dip"
		    	android:singleLine="false"
		    	android:textColor="@android:color/black"
		    	android:textAppearance="?android:attr/textAppearanceMedium"
		    	android:text="@string/txt_activate3"/>
	    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false">
        <Button
            android:id="@+id/btn_skip"
            android:layout_width="fill_parent"
            android:layout_height="50px"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/btn_known"
            android:background="@drawable/btn_bg"/>
        <Button
            android:id="@+id/btn_resetpwd"
            android:layout_width="fill_parent"
            android:layout_height="50px"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/btn_reset_email"
            android:background="@drawable/unusual_btn"/>
    </LinearLayout>
</RelativeLayout>