<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320px"
    android:layout_height="480px"
    android:orientation="vertical"
    android:isScrollContainer="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:paddingLeft="5px"
        android:paddingRight="5px"
        android:orientation="vertical">
        <TextView
                android:id="@+id/txv_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_username"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/log_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="200"
                android:inputType="textEmailAddress"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_password"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
                android:id="@+id/log_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:maxLength="200"/>
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:gravity="center_vertical">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txt_remember_password"
	            android:textColor="@android:color/black"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
	        <ToggleButton
	        	android:id="@+id/remember_pwd"
	        	android:layout_marginLeft="10dip"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="@drawable/mycheckbox"
	        	android:textOn="@string/empty"
	        	android:textOff="@string/empty"/>
		</LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="false">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="50px"
                android:layout_weight="0.33"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:text="@string/btn_login"
                android:background="@drawable/btn_bg"/>
            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="50px"
                android:layout_weight="0.33"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:text="@string/btn_register"
                android:background="@drawable/btn_bg"/>
            <Button
                android:id="@+id/btn_log_cancel"
                android:layout_width="fill_parent"
                android:layout_height="50px"
                android:layout_weight="0.33"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:text="@string/cancel"
                android:background="@drawable/btn_bg"/>
    </LinearLayout>
</RelativeLayout>

