<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320px"
    android:layout_height="480px"
    android:orientation="vertical"
    android:isScrollContainer="true"
    android:background="@drawable/bg">
    <TextView
    	android:background="@android:color/transparent"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_marginTop="8dip"
    	android:singleLine="true"
    	android:gravity="center"
    	android:textAppearance="?android:attr/textAppearanceMedium"
    	android:text="@string/title_login"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:layout_weight="1"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5px"
            android:paddingRight="5px"
            android:orientation="vertical">
		    <TextView
		    	android:background="@android:color/transparent"
		    	android:layout_height="wrap_content"
		    	android:layout_width="fill_parent"
		    	android:singleLine="false"
		    	android:textColor="@android:color/black"
		    	android:textAppearance="?android:attr/textAppearanceMedium"
		    	android:text="@string/txt_login1"/>
		    <TextView
		    	android:background="@android:color/transparent"
		    	android:layout_height="wrap_content"
		    	android:layout_width="fill_parent"
		    	android:singleLine="false"
		    	android:textColor="@android:color/black"
		    	android:textAppearance="?android:attr/textAppearanceMedium"
		    	android:text="@string/txt_login2"/>
		    <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
			    <TextView
			    	android:background="@android:color/transparent"
			    	android:layout_height="wrap_content"
			    	android:layout_width="fill_parent"
			    	android:layout_weight="7"
			    	android:singleLine="false"
			    	android:textColor="@android:color/black"
			    	android:textAppearance="?android:attr/textAppearanceMedium"
			    	android:text="@string/txt_login3"/>
			    <EditText
			    	android:id="@+id/email"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:singleLine="true"/>
            </LinearLayout>
            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
			    <TextView
			    	android:background="@android:color/transparent"
			    	android:layout_height="wrap_content"
			    	android:layout_width="fill_parent"
			    	android:layout_weight="7"
			    	android:singleLine="false"
			    	android:textColor="@android:color/black"
			    	android:textAppearance="?android:attr/textAppearanceMedium"
			    	android:text="@string/txt_login4"/>
			    <EditText
			    	android:id="@+id/password"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:singleLine="true"
	                android:password="true"/>
            </LinearLayout>
            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginLeft="90dip">
	            <CheckBox
	            	android:id="@+id/remember"
	            	android:layout_height="wrap_content"
	            	android:layout_width="wrap_content"/>
			    <TextView
			    	android:background="@android:color/transparent"
			    	android:layout_height="wrap_content"
			    	android:layout_width="fill_parent"
			    	android:singleLine="false"
			    	android:textColor="@android:color/black"
			    	android:textAppearance="?android:attr/textAppearanceMedium"
			    	android:text="@string/txt_login5"/>
            </LinearLayout>
	    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false">
        <Button
            android:id="@+id/btn_update"
            android:layout_width="fill_parent"
            android:layout_height="50px"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/btn_update"
            android:background="@drawable/btn_bg"/>
        <Button
            android:id="@+id/btn_resetpwd"
            android:layout_width="fill_parent"
            android:layout_height="50px"
            android:layout_weight="0.5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/btn_reset_pwd"
            android:background="@drawable/unusual_btn"/>
    </LinearLayout>
</RelativeLayout>